--- a/locales/zh.json
+++ b/locales/zh.json
@@ -108,5 +108,7 @@
     "test_acc": "测试集准确率",
     "plz_select_xml_dir": "请先选择标签地址",
     "anchors_key":"锚点 : ",
-    "make_sense_tool_button":"使用慧标进行图片标注"
+    "make_sense_tool_button":"使用慧标进行图片标注",
+    "disconnect_camera": "断开摄像头"
+
 }
