完成数据采集的完全本地化

--- a/locales/en.json
+++ b/locales/en.json
@@ -3,9 +3,9 @@
     "description": "This is an example with multi-language support.",
     "btn": "Button",
     "Electron_life_cycle": "Electron Life Cycle",
-    "descript_ob_detect": "Train an object detection model here, setting detection parameters, viewing the training process, and testing and exporting results.",
+    "descript_ob_detect": "Train object detection model here, setting detection parameters, viewing the training process, and testing and exporting results.",
     "descript_data_collect": "Here, data can be collected using a camera, with options to set the current target name and image save path.",
-    "descript_img_classifier": "Train an image classification model here, with the ability to set training parameters, monitor the training process, and test and export results.",
+    "descript_img_classifier": "Train image classification model here, with the ability to set training parameters, monitor the training process, and test and export results.",
     "descript_toolset": "Includes basic image annotation and collection tools.",
     "class_name": "Class Name",
     "save_dir": "Save Folder",
@@ -33,14 +33,17 @@
     "imgModalLabel": "Capture Record",
     "quit": "Quit",
     "quit_err": "Quit",
-    "trainset_dir_descript": "Please select the correct model training folder here(Path should not contain Chinese characters, and file names should not have spaces or special characters.)",
-    "trainset_dir_yolo_descript": "Please select the correct model training folder here (Path should not contain Chinese characters, and file names should not have spaces or special characters.)",
+    "trainset_dir_descript": "Please select the correct model training folder here.(Path should not contain Chinese characters, and file names should not have spaces or special characters.)",
+    "trainset_dir_yolo_descript": "Please select the correct model training folder here.",
     "train_param_descript": "Model Training Hyperparameters",
     "epoch_cls_tooltip": "This parameter determines the maximum number of iterations for this training session. It is recommended to set a larger number (above 100) to ensure the model is trained thoroughly to achieve optimal results.",
     "alpha_cls_tooltip": "This parameter affects the overall width of the model; a larger value approaches the full model. You can use the default value of 0.75 in the VESIBIT board.",
+    "alpha_yolo_tooltip": "This parameter affects the overall width of the model; a larger value approaches the full model. You can use the default value of 0.75 in the VESIBIT board.",
     "dataset_dir_cls_tooltip": "Please ensure that the selected folder is the main directory path, which contains all types of subfolders.",
     "batch_size_cls_tooltip": "This parameter influences the number of images learned at the same time during model training. A higher number means a more stable iteration direction, but it also significantly increases the required training dataset and memory. It is advisable to set this parameter to about 10% to 20% of the minimum number of training images for each category, but ideally not to exceed 64. For example, in a cat-dog classification task with training images in the ratio of 100:200, setting this parameter to between 10 and 20 is appropriate.",
+    "batch_size_yolo_tooltip": "This parameter influences the number of images learned at the same time during model training. A higher number means a more stable iteration direction, but it also significantly increases the required training dataset and memory. It is advisable to set this parameter to about 10% to 20% of the minimum number of training images for each category, but ideally not to exceed 64. For example, in a cat-dog classification task with training images in the ratio of 100:200, setting this parameter to between 10 and 20 is appropriate.",
     "data_aug_cls_tooltip": "This parameter determines whether to preprocess the data before the start of model training. When enabled, it will randomly segment, invert, or blur the training images.",
+    "data_aug_yolo_tooltip": "This parameter determines whether to preprocess the data before the start of model training. When enabled, it will randomly segment, invert, or blur the training images.",
     "yolozq_tooltip": "This parameter determines whether to preprocess the data before the start of model training. When enabled, it will randomly segment, invert, or blur the training images.",
     "epoch_yolo_tooltip": "This parameter determines the maximum number of iterations for this training session. It is recommended to set a relatively large number (above 100) to allow the model to train sufficiently for optimal results.",
     "alpha_tooltip": "This parameter affects the overall width of the model; a larger value approaches the full model. You can use the default value of 0.75 in the VESIBIT board.",
@@ -109,5 +112,10 @@
     "plz_select_xml_dir": "Please select the label directory first",
     "anchors_key": "Anchor: ",
     "make_sense_tool_button":"Open Make-Sense",
-    "disconnect_camera": "Disconnect camera"
+    "disconnect_camera": "Disconnect camera",
+    "camera_not_found": "Camera Not Found",
+    "camera_opened": "The camera has been opened.",
+    "camera_open_failed": "Failed to open the camera, please check if the camera is available!",
+    "camera_disconnected": "The camera has been disconnected.",
+    "connect_camera": "Connect the camera"
 }
