--- a/locales/zh.json
+++ b/locales/zh.json
@@ -38,9 +38,12 @@
     "train_param_descript": "模型训练超参数",
     "epoch_cls_tooltip": "该参数决定该次训练的最大迭代次数，建议设定一个较大的数字（100以上），让模型充分训练到最佳效果",
     "alpha_cls_tooltip": "该参数影响模型的整体宽度，数值越大越接近完整模型，如果在威智板中使用默认0.75即可",
+    "alpha_yolo_tooltip": "该参数影响模型的整体宽度，数值越大越接近完整模型，如果在威智板中使用默认0.75即可",
     "dataset_dir_cls_tooltip": "注意要选择的文件夹是总文件夹路径，即所有种类子文件夹都在的目录",
     "batch_size_cls_tooltip": "该参数影响模型训练时每次学习同时学习的图片数量，越多代表迭代的方向更稳定，但同时需要的训练集数量大增而且需要的内存更大，建议设定在最小种类训练图片数的10%~20%左右，但是最好不要超过64。比如猫狗分类中猫狗训练图片是100:200，那该参数设定为10~20之间比较合适",
+    "batch_size_yolo_tooltip": "该参数影响模型训练时每次学习同时学习的图片数量，越多代表迭代的方向更稳定，但同时需要的训练集数量大增而且需要的内存更大，建议设定在最小种类训练图片数的10%~20%左右，但是最好不要超过64。比如猫狗分类中猫狗训练图片是100:200，那该参数设定为10~20之间比较合适",
     "data_aug_cls_tooltip": "该参数影响模型训练开始前是否对数据进行预处理，开启后会随机对训练集图片进行分割、反转、模糊等操作",
+    "data_aug_yolo_tooltip": "该参数影响模型训练开始前是否对数据进行预处理，开启后会随机对训练集图片进行分割、反转、模糊等操作",
     "yolozq_tooltip": "该参数影响模型训练开始前是否对数据进行预处理，开启后会随机对训练集图片进行分割、反转、模糊等操作",
     "epoch_yolo_tooltip": "该参数决定该次训练的最大迭代次数，建议设定一个较大的数字（100以上），让模型充分训练到最佳效果",
     "alpha_tooltip": "该参数影响模型的整体宽度，数值越大越接近完整模型，如果在威智板中使用默认0.75即可",
@@ -109,6 +112,13 @@
     "plz_select_xml_dir": "请先选择标签地址",
     "anchors_key":"锚点 : ",
     "make_sense_tool_button":"使用慧标进行图片标注",
-    "disconnect_camera": "断开摄像头"
+    "disconnect_camera": "断开摄像头",
+    "camera_not_found": "没有发现摄像头",
+    "camera_opened": "摄像头已打开。",
+    "camera_open_failed": "摄像头开启失败，请检查摄像头是否可用！",
+    "camera_disconnected": "摄像头已断开。",
+    "connect_camera": "连接摄像头"
+
+
 
 }
