--- a/locales/zht.json
+++ b/locales/zht.json
@@ -38,9 +38,12 @@
     "train_param_descript": "模型訓練超參數",
     "epoch_cls_tooltip": "該參數決定該次訓練的最大反覆運算次數，建議設定一個較大的數字（100以上），讓模型充分訓練到最佳效果",
     "alpha_cls_tooltip": "該參數影響模型的整體寬度，數值越大越接近完整模型，如果在威智板中使用默認0.75即可",
+    "alpha_yolo_tooltip": "該參數影響模型的整體寬度，數值越大越接近完整模型，如果在威智板中使用默認0.75即可",
     "dataset_dir_cls_tooltip": "注意要選擇的資料夾是總資料夾路徑，即所有類型的子資料夾都位於的目錄。",
     "batch_size_cls_tooltip": "該參數影響模型訓練時每次學習同時學習的圖片數量，越多代表反覆運算的方向更穩定，但同時需要的訓練集數量大增而且需要的記憶體更大，建議設定在最小種類訓練圖片數的10%~20%左右，但是最好不要超過64。比如貓狗分類中貓狗訓練圖片是100:200，那該參數設定為10~20之間比較合適",
+    "batch_size_yolo_tooltip": "該參數影響模型訓練時每次學習同時學習的圖片數量，越多代表反覆運算的方向更穩定，但同時需要的訓練集數量大增而且需要的記憶體更大，建議設定在最小種類訓練圖片數的10%~20%左右，但是最好不要超過64。比如貓狗分類中貓狗訓練圖片是100:200，那該參數設定為10~20之間比較合適",
     "data_aug_cls_tooltip": "該參數影響模型訓練開始前是否對數據進行預處理，開啟後會隨機對訓練集圖片進行分割、反轉、模糊等操作",
+    "data_aug_yolo_tooltip": "該參數影響模型訓練開始前是否對數據進行預處理，開啟後會隨機對訓練集圖片進行分割、反轉、模糊等操作",
     "yolozq_tooltip": "該參數影響模型訓練開始前是否對數據進行預處理，開啟後會隨機對訓練集圖片進行分割、反轉、模糊等操作",
     "epoch_yolo_tooltip": "該參數決定該次訓練的最大反覆運算次數，建議設定一個較大的數字（100以上），讓模型充分訓練到最佳效果",
     "alpha_tooltip": "該參數影響模型的整體寬度，數值越大越接近完整模型，如果在威智板中使用默認0.75即可",
@@ -109,6 +112,11 @@
     "plz_select_xml_dir": "請先選擇標籤地址",
     "anchors_key":"錨點 : ",
     "make_sense_tool_button":"使用慧標進行圖片标註",
-    "disconnect_camera": "斷開攝像頭"
+    "disconnect_camera": "斷開攝像頭",
+    "camera_not_found": "沒有發現攝像頭",
+    "camera_opened": "攝影機已打開。",
+    "camera_open_failed": "攝影機開啟失敗，請檢查攝影機是否可用！",
+    "camera_disconnected": "攝影機已斷開。",
+    "connect_camera": "連接攝影機"
 }
 
