--- a/tools/miniLEDdisplay_adv/language/chinese (simplified).xml
+++ b/tools/miniLEDdisplay_adv/language/chinese (simplified).xml
@@ -2,7 +2,7 @@
 <!--定义系统所用语言库-->
 <bmpbadge lan="chinese (simplified)" author="dcs" date="2019-10-2">
 
-  <form name="mainform" text="迷你LED显示屏(多功能) V9.34">
+  <form name="mainform" text="LED灯牌编辑器">
     <Menu>
       <item id="file" type="0">文件(&amp;F)</item>
       <item id="new" type="0">新建(&amp;N)</item>
